# URE-coding-analysis

./: .gitignore  Prelim Spreadsheet.csv  README.md  URE Bibliography.html  analysis.ipynb  article_summary.csv  articles_with_codes_and_metadata.csv  code_summary.csv  codes_with_article_details.csv  coding matrix.csv  coding_matrix_crosstab.csv  comprehensive_coding_analysis.xlsx  title_matches.csv
nvivo_coding_summary/: pyproject.toml
