[project]
name = "nvivo-coding-summary"
version = "0.1.0"
description = ""
authors = [
    {name = "margarectdeleon",email = "margaretcdeleon@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)"
]

[tool.poetry]
packages = [{include = "nvivo_coding_summary", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
